update about, contact, and projects

--- a/public/Projects/FrameInstructor/index.html
+++ b/public/Projects/FrameInstructor/index.html
@@ -59,19 +59,22 @@
                                 <li> -->
                                     <ul class="list-unstyled" id="project-list">
                                         <li>
-                                            <a href="./Nomad/index.html">Nomad</a>
+                                            <a href="https://www.noxlock.dev/Projects/MAOL/index.html">Nomad</a>
                                         </li>
                                         <li>
-                                            <a href="./CombAPI/index.html">CombAPI</a>
+                                            <a href="https://www.noxlock.dev/Projects/Nomad/index.html">Nomad</a>
                                         </li>
                                         <li>
-                                            <a href="./FrameInstructor/index.html">FrameInstructor</a>
+                                            <a href="https://www.noxlock.dev/Projects/CombAPI/index.html">CombAPI</a>
                                         </li>
                                         <li>
-                                            <a href="./noxlock.dev/index.html">noxlock.dev</a>
+                                            <a href="https://www.noxlock.dev/Projects/FrameInstructor/index.html">FrameInstructor</a>
                                         </li>
                                         <li>
-                                            <a href="./geo<>code/index.html">Geo<>Code</a>
+                                            <a href="https://www.noxlock.dev/Projects/noxlock.dev/index.html">noxlock.dev</a>
+                                        </li>
+                                        <li>
+                                            <a href="https://www.noxlock.dev/Projects/geo<>code/index.html">Geo<>Code</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -87,31 +90,20 @@
                         <p>
                         </br>
                             FrameInstructor is a Python application that uses Discord, instead of the CLI as a front-end to accept user input.
+                            <br/>
                             The program does this through the 'discord' Python package, and is hosted on heroku. The application is integrated into Discord
+                            <br/>
                             in the form of a chat bot, listening for commands in the given chat room, and fetching data from an API depending on what input was supplied.
                         </p>
                         </br>
                         <p>
                             The data fetched from the API is related to specific moves in the online fighting game Tekken 7, the data included provides information on things like how much damage the move does,
+                            <br/>
                             what type of status it inflicts after it hits an opponent, ect.
                         </p>
                     </div>
                 </div>
             </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </div>
 
 <!-- FOOTER -->
