--- a/public/Projects/MAOL/index.html
+++ b/public/Projects/MAOL/index.html
@@ -85,19 +85,27 @@
             </div>
 
                 <div id="content">
-                    <h2>CombAPI</h2>
-                        <h3> <a target="blank" href="https://github.com/noxlock/CombAPI">Git Repo</a></h3>
+                    <h2>MAOL</h2>
+                        <h3> <a target="blank" href="https://github.com/noxlock/my-anime-openings-list">Git Repo</a></h3>
                         <p>
                         </br>
-                            CombAPI is my first ever full-stack application, albeit the front-end is lacking compared to the rest. The project is an Express.js API that fetches data from a sqlite database.
-                            Requests can be made by the user either through specific tools such as cURL, or Postman, or they can also be made through the front-end.
+                            MyAnimeOpeningsList (abbreviated MAOL), is a site designed for users to be able to rate songs that appear in Japanese animated shows.
+                        </br>
+                            The projects is based off of sites such as MyAnimeList (MAL), AniList, and Kitsu, which all allow users to create an account, and
+                        <br/>
+                            display what shows they've watched, as well as assign them a rating for others to see on their profile.
                         </p>
                         </br>
                         <p>
-                            The front-end is purely HTML & CSS, rendered by Express using Pug as a templating engine. The database and it's tables are loosely based on 
-                            what you'd find in the database of a VoIP application such as Discord, or maybe Slack.
-                        </br>
-                            The full documentation on specific routes, and what they do is available at the GitHub repository.
+                            There are a couple sites that are knock-offs of MAL, such as MyDramaList, which exists for the same purpose but for drama television shows, instead of animated ones.
+                        <br/>
+                            My friends and I often talk about which songs we like from anime, so one of them suggested I make one of those knock-off sites specifically for anime related songs, and
+                        <br/>
+                            that's how I started working on MAOL.
+                        </p>
+                        <br/>
+                        <p>
+                            The project uses a Django backend together with a Vue frontend, along with a PostGres database.
                         </p>
                     </div>
                 </div>
