--- a/public/Projects/Nomad/index.html
+++ b/public/Projects/Nomad/index.html
@@ -59,19 +59,22 @@
                                 <li> -->
                                     <ul class="list-unstyled" id="project-list">
                                         <li>
-                                            <a href="./Nomad/index.html">Nomad</a>
+                                            <a href="https://www.noxlock.dev/Projects/MAOL/index.html">Nomad</a>
                                         </li>
                                         <li>
-                                            <a href="./CombAPI/index.html">CombAPI</a>
+                                            <a href="https://www.noxlock.dev/Projects/Nomad/index.html">Nomad</a>
                                         </li>
                                         <li>
-                                            <a href="./FrameInstructor/index.html">FrameInstructor</a>
+                                            <a href="https://www.noxlock.dev/Projects/CombAPI/index.html">CombAPI</a>
                                         </li>
                                         <li>
-                                            <a href="./noxlock.dev/index.html">noxlock.dev</a>
+                                            <a href="https://www.noxlock.dev/Projects/FrameInstructor/index.html">FrameInstructor</a>
                                         </li>
                                         <li>
-                                            <a href="./geo<>code/index.html">Geo<>Code</a>
+                                            <a href="https://www.noxlock.dev/Projects/noxlock.dev/index.html">noxlock.dev</a>
+                                        </li>
+                                        <li>
+                                            <a href="https://www.noxlock.dev/Projects/geo<>code/index.html">Geo<>Code</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -119,25 +122,11 @@
                         </p>
                         <br/>
                         <p>
-                            I struggled a lot with motivation during the development of this project, which I think was primarily due to COVID forcing me to take on this project at home. I enjoy making time for development, at this point, I have finished study and have no job, so there is no time to make, all time is free time, which makes it seem less appealing.
+                            I struggled a lot with motivation during the development of this project (due to COVID, among other things), which is why it remains unfinished today.
                         </p>
                     </div>
                 </div>
             </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </div>
 
 <!-- FOOTER -->
