--- a/public/Projects/geo<>code/index.html
+++ b/public/Projects/geo<>code/index.html
@@ -58,19 +58,22 @@
                                 <li> -->
                                     <ul class="list-unstyled" id="project-list">
                                         <li>
-                                            <a href="./Nomad/index.html">Nomad</a>
+                                            <a href="https://www.noxlock.dev/Projects/MAOL/index.html">Nomad</a>
                                         </li>
                                         <li>
-                                            <a href="./CombAPI/index.html">CombAPI</a>
+                                            <a href="https://www.noxlock.dev/Projects/Nomad/index.html">Nomad</a>
                                         </li>
                                         <li>
-                                            <a href="./FrameInstructor/index.html">FrameInstructor</a>
+                                            <a href="https://www.noxlock.dev/Projects/CombAPI/index.html">CombAPI</a>
                                         </li>
                                         <li>
-                                            <a href="./noxlock.dev/index.html">noxlock.dev</a>
+                                            <a href="https://www.noxlock.dev/Projects/FrameInstructor/index.html">FrameInstructor</a>
                                         </li>
                                         <li>
-                                            <a href="./geo<>code/index.html">Geo<>Code</a>
+                                            <a href="https://www.noxlock.dev/Projects/noxlock.dev/index.html">noxlock.dev</a>
+                                        </li>
+                                        <li>
+                                            <a href="https://www.noxlock.dev/Projects/geo<>code/index.html">Geo<>Code</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -88,31 +91,22 @@
                         </br>
                         </br>
                             Geo<>Code is a Python CLI application that can be used to perform geocode operations,
+                        <br/>
                             this includes converting a street address to it's corresponding latitude and longitude.
+                        <br/>
                             The application also provides a method to randomly generate a street address
+                        <br/>
                             within Australia, New Zealand, or anywhere in the world.
                         </p>
                         </br>
                         <p>
-                            The application carries out it's functions by making calls to Google's Maps API, which is done in python by using the googlemaps package. The application can be used through the CLI menu, or it can also be run with a single command from the shell using arguments.
+                            The application carries out it's functions by making calls to Google's Maps API, which is done in python by using the googlemaps package.
+                        <br/>
+                            The application can be used through the CLI menu, or it can also be run with a single command from the shell using arguments.
                         </p>
                     </div>
                 </div>
             </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </div>
 
 <!-- FOOTER -->
