--- a/public/Projects/noxlock.dev/index.html
+++ b/public/Projects/noxlock.dev/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Noxlock - Projects</title>
 
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
@@ -29,7 +30,7 @@
                 <i class="fa fa-align-justify"></i>
         </button>
 
-    
+
         <li> <a class="navbar-brand" href="../../index.html"><span class="fa fa-home"></span></a> </li>
 
         <li> <a  class="navbar-text" href="../../About/index.html">About</a> </li>
@@ -58,19 +59,22 @@
                                 <li> -->
                                     <ul class="list-unstyled" id="project-list">
                                         <li>
-                                            <a href="./Nomad/index.html">Nomad</a>
+                                            <a href="https://www.noxlock.dev/Projects/MAOL/index.html">Nomad</a>
                                         </li>
                                         <li>
-                                            <a href="./CombAPI/index.html">CombAPI</a>
+                                            <a href="https://www.noxlock.dev/Projects/Nomad/index.html">Nomad</a>
                                         </li>
                                         <li>
-                                            <a href="./FrameInstructor/index.html">FrameInstructor</a>
+                                            <a href="https://www.noxlock.dev/Projects/CombAPI/index.html">CombAPI</a>
                                         </li>
                                         <li>
-                                            <a href="./noxlock.dev/index.html">noxlock.dev</a>
+                                            <a href="https://www.noxlock.dev/Projects/FrameInstructor/index.html">FrameInstructor</a>
                                         </li>
                                         <li>
-                                            <a href="./geo<>code/index.html">Geo<>Code</a>
+                                            <a href="https://www.noxlock.dev/Projects/noxlock.dev/index.html">noxlock.dev</a>
+                                        </li>
+                                        <li>
+                                            <a href="https://www.noxlock.dev/Projects/geo<>code/index.html">Geo<>Code</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -81,40 +85,27 @@
             </div>
 
                 <div id="content">
-                    <h2>noxlock.dev</h2>
+                    <h2>Noxlock.dev</h2>
                         <h3> <a target="blank" href="https://github.com/noxlock/Portfolio">Git Repo</a></h3>
+                        </br>
                         <p>
                             This project is what you're staring at right now.
-                        </br>
-                        </br>
+                        <br/>
+                        <br/>
                             My portfolio is the first HTML/CSS project I put a lot of effort into, and my first taste of using a CSS framework such as Bootstrap.
-                        </br>
-                        </br>
-                            During the time developing my Portfolio I also had to learn how to do a few things. I had never set up hosting before, which meant setting up A Records with my purchased domain, implementing Content Security Policies, integrity on resources, firebase configuration tweaking, the whole nine.
-                        </p>
-                        </br>
-                        <p>
+                        <br/>
+                        <br/>
+                            During the time developing my Portfolio I also had to learn how to do a few things. I had never set up hosting before,
+                        <br/>
+                            which meant setting up A Records with my purchased domain, implementing Content Security Policies, integrity on resources,
+                        <br/>
+                            firebase configuration tweaking, the whole nine.
+                        <br/>
+                        <br/>  
                             This project was also my first taste of some workflow related things, creating, deleting, merging branches, and setting up a CI/CD pipeline with CircleCI.
-                        </p>
-                        </br>
-                        </br>
                     </div>
                 </div>
             </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </div>
 
 <!-- FOOTER -->
@@ -128,7 +119,7 @@
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-<script src="https://kit.fontawesome.com/d0a9161acf.js" integrity="sha384-Y9Cj50I0Dbus8c/yjudUHiWuuqDpXCn4P040Wy9cqSmDGO5qnyf1EwK5zgmHr6/F" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/d0a9161acf.js" crossorigin="anonymous"></script>
 
 </body>
 
