--- a/public/About/index.html
+++ b/public/About/index.html
@@ -48,8 +48,9 @@
             <h2>About</h2>
             <h4>Hi, I'm Noxlock. </h4> <br/>  
             <p>
-            I'm a developer interested in all things cyber,
-            I've had a quick taste of being in a development role, but I'd like to dive into where my interests lie now - infosec.
+            I'm a developer interested in all things cyber, from web dev to pentesting.
+            <br/>
+            I've got a couple years under my belt as a back-end dev, and am currently studying a CompSci degree at the University of Newcastle.
             <br/>
             <br/>
             I'm looking for opportunities surrounding the tech scene,
