--- a/public/Projects/index.html
+++ b/public/Projects/index.html
@@ -86,6 +86,17 @@
 
                     <div class="container">
                         <div class="row">
+                            <div class ="col-12 text-sm-center col-sm-4 py-5">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <h4 class="card-title">MAOL</h4>
+                                        <h5 class="card-subtitle text-muted">Python, Django, Vue, Postgres</h5>
+                                        <p class="card-text"> A version of MyAnimeList designed for songs that appear in shows.</p>
+                                        <a href="./MAOL/index.html" class="card-link">View Page</a>
+                                    </div>
+                                </div>
+                            </div>
+
                             <div class="col-12 text-sm-center col-sm-4 py-5">
                                 <div class="card">
                                     <div class="card-body">
@@ -109,6 +120,10 @@
                                 </div>
                             </div>
 
+                            
+                        </div>
+
+                        <div class="row">
                             <div class ="col-12 text-sm-center col-sm-4 py-5">
                                 <div class="card">
                                     <div class="card-body">
@@ -119,9 +134,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
 
-                        <div class="row">
                             <div class="col-12 text-sm-center col-sm-4 py-5">
                                 <div class="card">
                                     <div class="card-body">
